syntax = "proto3";

package common;

// ======== ResponseResult & ResponseType ========

enum ResponseType {
  RESPONSE_TYPE_UNSPECIFIED = 0;
  OK = 1;
  ERR = 2;
}

message ResponseResult {
  ResponseType type = 1;
  string message = 2;
}

// ======== Date ========

enum Week {
  WEEK_UNSPECIFIED = 0;
  MON = 1; TUE = 2; WED = 3; THU = 4; FRI = 5; SAT = 6; SUN = 7;
}


enum Month {
  MONTH_UNSPECIFIED = 0;
  JAN = 1; FEB = 2; MAR = 3; APR = 4; MAY = 5; JUN = 6;
  JUL = 7; AUG = 8; SEP = 9; OCT = 10; NOV = 11; DEC = 12;
}

message Date {
  uint64 year = 1;   // Year
  Month month = 2;   // Month
  Week week = 3;   // Week
  message Time {
    uint64 hour = 1;  // Hour
    uint64 min = 2;  // Min
  }
  Time time = 4;   // Time
}

message ActionResult {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    OK = 1;
    ERR = 2;
  }
  Type type = 1;
  string message = 2;
}

enum Status {
  STATUS_UNSPECIFIED = 0;
  ACTIVE = 1;  // active
  STOPPED = 2;  // stopped
}

// ========== Shared host info  ==========
message CommonInfo {
  string hostname = 1; // Hostname
  Status status = 2; // active | stopped
  double cpu = 3; // CPU usage
  double memory = 4; // Memory usage
}
// ========== Error log entry  ==========
enum LogLevel {
  LOG_LEVEL_UNSPECIFIED = 0;
  DEBUG = 1;
  INFO = 2;
  NOTICE = 3;
  WARN = 4;
  ERROR = 5;
  CRIT = 6;
  ALERT = 7;
  EMERG = 8;
}

message ErrorLog {
  Date date = 1; // Date block
  string module = 2; // Module
  LogLevel level = 3; // debug|info|notice|warn|error|crit|alert|emerg
  uint64 pid = 4; // Pid
  string client = 5; // IP:Port
  string message = 6; // Message
}
